fix(iota-network): fix Swiper loop on mobile and improve navbar scrolling on tablets (#415)
* refactor(iota-network): update swiper loop in mobile

* refactor(iota-network): update navigation and navbar items components

* chore(iota-network): optimize lotties files

* Revert "chore(iota-network): optimize lotties files"

This reverts commit d6ad2428072b3dfa88ba7ffd02d509636b82ff74.

--- a/apps/iota-network/app/globals.css
+++ b/apps/iota-network/app/globals.css
@@ -18,8 +18,6 @@ body {
 }
 /* Static Carousel */
 .static-swiper > .swiper-wrapper {
-    transition-timing-function: linear !important;
-    will-change: transform;
     display: flex !important;
     align-items: center !important;
     justify-content: center !important;
